--- a/servers/.env.example
+++ b/servers/.env.example
@@ -1,7 +1,15 @@
 JWT_SECRET="secret"
 SALT_ROUNDS=10
+API_PORT="3001"
+WEBSOKCET_PORT="4001"
+WEBCLIENT_PORT="5001"
 DATABASE_HOST="localhost"
 DATABASE_PORT="5432"
 DATABASE_USER="user"
 DATABASE_PASSWORD="password"
 DATABASE_NAME="todo"
+CASSANDRA_CONTACT_POINTS="localhost"
+CASSANDRA_DATACENTER="datacenter1"
+CASSANDRA_KEYSPACE="todo_ops"
+RABBITMQ_URL="amqp://localhost"
+RABBITMQ_QUEUE_POST_EDIT="todo_post_edit_queue"
